--- a/site/templates/email_templates/welcome.html
+++ b/site/templates/email_templates/welcome.html
@@ -4,12 +4,9 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+    <link rel="stylesheet" href="https://thicc.s3.amazonaws.com/static/css/styles-main.css">
     <script type="text/javascript">
-        function whatLink(){
-            if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) window.location = "metoo://?uuid={{ uuid }}/?token={{ token }}"
-            else window.location = "https://api.metoo.io/verifyemail/{{ uuid }}/{{ token }}";
-        }
         function twitterLink(){
             if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) window.location = "twitter://user?screen_name=thiccgaming"
             else window.location = "http://twitter.com/thiccgaming";
@@ -17,10 +14,6 @@
         function instagramLink(){
             if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) window.location = "instagram://user?username=thiccgaming"
             else window.location = "http://instagram.com/thiccgaming";
-        }
-        function discordLink(){
-            if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) window.location = "instagram://user?username=thiccgaming"
-            else window.location = "http://discord.com/thiccgaming";
         }
     </script>
     <title>Welcome to Thicc Gaming!</title>
@@ -141,10 +134,10 @@
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-top: 25px; text-align: center;">Questions or feedback? Contact us <a href="mailto:support@thicc.io">here</a></p>
 
                         <div class="social-top" style="text-align: center; margin-top: 25px " >
-                            <a href="javascript:twitterLink()" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-                            <a href="javascript:instagramLink()" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-                            <a href="javascript:discordLink()" target="_blank"><i class="fa fa-discord fa-2x"></i></a>
-                            <a href="https://github.com/aldenjenkins/ThiccGaming" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                            <a href="javascript:twitterLink()" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                            <a href="javascript:instagramLink()" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                            <a href="https://discord.gg/NXC4rw6" target="_blank"><i class="fab fa-discord fa-2x"></i></a>
+                            <a href="https://github.com/aldenjenkins/ThiccGaming" target="_blank"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
                         </div>
                       </td>
                     </tr>
