added search functionality to stats and bans

--- a/site/templates/bans/ban_list.html
+++ b/site/templates/bans/ban_list.html
@@ -16,6 +16,9 @@
 
 {% block main_content %}
 
+<form method='GET' action=''>
+<input id="main-nav-search-input" type="search" name="q" placeholder="Search bans by username or steam64..." value={{ request.GET.q }}>
+</form>
 {#    {% block messages %}#}
 {#        {% if messages %}#}
 {#        <div id="messages">#}
